change dir in back-end.yml

--- a/.github/workflows/back-end.yml
+++ b/.github/workflows/back-end.yml
@@ -29,6 +29,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14'
+      - name: Change directory
+        run: cd back-end
       - name: Install dependencies
         run: npm install
       - name: Run build
