change dir back-end to backend

--- a/.github/workflows/back-end.yml
+++ b/.github/workflows/back-end.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           node-version: '14'
       - name: Change directory
-        run: cd back-end
+        run: cd backend
       - name: Install dependencies
         run: npm install
       - name: Run build
