--- a/.github/workflows/back-end.yml
+++ b/.github/workflows/back-end.yml
@@ -34,4 +34,4 @@ jobs:
         run: npm install
       - name: Run build
         working-directory: ./backend
-        run: npm run build
+        run: node app.js
