delete redisConfig.js and adjust .env in back-end.yml

--- a/.github/workflows/back-end.yml
+++ b/.github/workflows/back-end.yml
@@ -28,10 +28,10 @@ jobs:
         run: npm install
       - name: Set up environment variables
         run: |
-          echo "DB_HOST=${{ secrets.DB_HOST }}" >> $GITHUB_ENV
-          echo "DB_USER=${{ secrets.DB_USER }}" >> $GITHUB_ENV
-          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> $GITHUB_ENV
-          echo "DB_DATABASE=${{ secrets.DB_DATABASE }}" >> $GITHUB_ENV
+          echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
+          echo "DB_USER=${{ secrets.DB_USER }}" >> .env
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" .env
+          echo "DB_DATABASE=${{ secrets.DB_DATABASE }}" >> .env
       - name: Run build
         working-directory: ./backend
         run: node app.js
