--- a/.github/workflows/back-end.yml
+++ b/.github/workflows/back-end.yml
@@ -19,24 +19,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '16'
+
       - name: Install dependencies
         working-directory: ./backend
         run: npm install
+
       - name: Set up environment variables
         run: |
           echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
           echo "DB_USER=${{ secrets.DB_USER }}" >> .env
           echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" .env
           echo "DB_DATABASE=${{ secrets.DB_DATABASE }}" >> .env
-      - name: Run build 
+          
+      - name: Run tests
         working-directory: ./backend
-        run: node app.js
-        env:
-          DB_HOST: ${{ secrets.DB_HOST }}
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          DB_DATABASE: ${{ secrets.DB_DATABASE }}
+        run: npm test
