--- a/.github/workflows/back-end.yml
+++ b/.github/workflows/back-end.yml
@@ -35,6 +35,7 @@ jobs:
           echo "DB_USER=${{ secrets.DB_USER }}" >> .env
           echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" .env
           echo "DB_DATABASE=${{ secrets.DB_DATABASE }}" >> .env
+          echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
           
       - name: Run tests
         working-directory: ./backend
