--- a/.github/workflows/back-end.yml
+++ b/.github/workflows/back-end.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '20'
+          node-version: latest
 
       - name: Install dependencies
         working-directory: ./backend
