--- a/.github/workflows/back-end.yml
+++ b/.github/workflows/back-end.yml
@@ -17,13 +17,17 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [ 14, 16, 18 , 20]
+    name: Node ${{ matrix.node }} check
     steps:
       - uses: actions/checkout@v4
 
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: latest
+          node-version: ${{ matrix.node }}
 
       - name: Install dependencies
         working-directory: ./backend
