--- a/.github/workflows/back-end.yml
+++ b/.github/workflows/back-end.yml
@@ -54,7 +54,7 @@ jobs:
           
       - name: Load SQL dump
         run: |
-          mysql -h DB_HOST -u DB_USER -p DB_PASSWORD DB_DATABASE < ./backend/src/sql_test.sql
+          mysql -h 127.0.0.1 -u root --password=root flashcard < ./backend/src/sql_test.sql
             
       - name: Run tests
         working-directory: ./backend
