Thêm thống kê doanh thu, tài khoản. tìm kiếm và lọc khóa học và bộ thẻ

--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.10.9",
     "@mui/joy": "^5.0.0-beta.48",
-    "@mui/lab": "5.0.0-alpha.106",
-    "@mui/material": "^5.16.1",
+    "@mui/lab": "^5.0.0-alpha.173",
+    "@mui/material": "^5.16.5",
+    "@mui/x-charts": "^7.11.1",
     "@mui/x-data-grid": "^7.11.0",
     "@mui/x-data-grid-generator": "^7.11.0",
-    "@mui/x-date-pickers": "^5.0.6",
+    "@mui/x-date-pickers": "^5.0.20",
     "@reduxjs/toolkit": "^1.8.3",
     "@tabler/icons": "^1.84.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -20,6 +21,7 @@
     "apexcharts": "^3.23.1",
     "axios": "^1.7.2",
     "chance": "^1.1.9",
+    "dayjs": "^1.11.12",
     "http-status-codes": "^2.3.0",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
