--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.10.2",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.4",
     "sequelize": "^6.37.3"
   },
