--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon socket.js",
     "test": "jest --runInBand --detectOpenHandles --forceExit"
   },
   "keywords": [],
@@ -25,8 +25,10 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.10.2",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "jest": "^29.7.0",
