--- a/expo-mobile/package.json
+++ b/expo-mobile/package.json
@@ -16,21 +16,22 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
-    "@stripe/stripe-react-native": "^0.39.0",
+    "@stripe/stripe-react-native": "0.37.2",
     "date-fns": "^4.1.0",
-    "expo": "~51.0.28",
-    "expo-av": "^14.0.7",
+    "engine.io-parser": "^5.2.3",
+    "expo": "~51.0.39",
+    "expo-av": "~14.0.7",
     "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.9",
-    "expo-image": "^1.13.0",
+    "expo-font": "~12.0.10",
+    "expo-image": "~1.13.0",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.5",
+    "expo-router": "~3.5.24",
+    "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
@@ -46,15 +47,16 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.79",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "~51.0.4",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
