--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,8 @@
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "sequelize": "^6.37.3",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "stripe": "^17.4.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
