--- a/expo-mobile/package.json
+++ b/expo-mobile/package.json
@@ -3,7 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --port 8081",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -21,14 +21,16 @@
     "@react-navigation/stack": "^6.4.1",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
-    "@stripe/stripe-react-native": "0.37.2",
+    "@stripe/stripe-react-native": "^0.37.2",
     "date-fns": "^4.1.0",
     "engine.io-parser": "^5.2.3",
     "expo": "~51.0.39",
     "expo-av": "~14.0.7",
     "expo-constants": "~16.0.2",
+    "expo-file-system": "^18.0.4",
     "expo-font": "~12.0.10",
     "expo-image": "~1.13.0",
+    "expo-image-picker": "^16.0.3",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.24",
     "expo-splash-screen": "~0.27.7",
@@ -39,6 +41,7 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.4.0",
     "react-native": "0.74.5",
     "react-native-async-storage": "^0.0.1",
     "react-native-elements": "^3.4.3",
